# mtjs

./: .gitmodules  Dockerfile  GRAIN-inet-en.md  GRAIN-inet-ru.md  GRAIN-ru.md  GRAIN.md  Grain-bl-ru.md  Grain-bl.md  LICENSE  README.md  build_both.sh  build_one.sh
src/: .gitignore  CMakeLists.txt  genum.hpp.in  rebuild_syms.sh
src/common/: CMakeLists.txt  async_task.h  eventEmitter.h  http_ptrs.h  ioStreams.h  jHolder.h  js_tools.h  jsscope.h  malloc_debug.cpp  malloc_debug.h  mtjsEvent.h  mtjs_opaque.h  rcf.h  timerTask.h  timers.h
src/js/: CMakeLists.txt
src/js/Event/: bcEvent.h
src/js/bc_tools/: ADDRESS_id.h  BLOCK_id.h  CDatabase.h  CMakeLists.txt  CONTRACT_id.h  EPOCH_id.h  IDatabase.h  NODE_id.h  PK_id.h  QUORUM.h  THASH_id.h  TRANSACTION_id.h  TypedStr.h  base16.cpp  base16.h  base62.cpp  base62.h  bbb.cpp  blake2bHasher.h  bls_io.h  blst_cp.cpp  blst_cp.h  cached_state.h  cellable.cpp  cellable.h  contract_rt.h  dbHistory.h  db_to_save.h  dirty.h  execute_transaction.cpp  execute_transaction.h  fee_calcer.h  get_tariff.h  getenv2.h  hsh.h  init_root.cpp  init_root.h  msg.cpp  msg.h  msgFactory.cpp  (+15 more)
src/js/bc_tools/md/: do_ConfirmLeaderREQ.h  md_Base.h  md_BlockAcceptedREQ.h  md_BlockAcceptedRSP.h  md_BlockDBStore.h  md_BlockInfo.h  md_ConfirmLeaderREQ.h  md_ConfirmLeaderRSP.h  md_DoHeartBeatREQ.h  md_DoYouHaveBlockREQ.h  md_DoYouHaveBlockRSP.h  md_GetSavedBlocksREQ.h  md_GetSavedBlocksRSP.h  md_GetTransactionREQ.h  md_GetTransactionRSP.h  md_GetUserNonceREQ.h  md_GetUserNonceRSP.h  md_GetUserStatusREQ.h  md_GetUserStatusRSP.h  md_HeartBeatREQ.h  md_HeartBeatRSP.h  md_HeartBitData.h  md_InstructionList.h  md_LcEnvelopeREQ.h  md_LcREQ.h  md_LcRSP.h  md_LeaderCertificate.h  md_TX.h  md_TxMint.h  md_ValidateBlockREQ.h  md_ValidateBlockRSP.h  md_attachment_data.h
src/js/bc_tools/tmp1/: blst_ds.h  blst_test.cpp  blst_w2.cpp  blst_w2.h  blst_wr.cpp  blst_wr.h  blst_wrapper.h  blstpp.h
src/js/common/: CMakeLists.txt  async_task.h  errcodes.h  eventEmitter.cpp  eventEmitter.h  http_ptrs.h  ioStreams.h  jHolder.h  jsValueGuard.h  js_tools.h  jsscope.h  mtjsEvent.h  mtjs_opaque.h  rcf.h  timerTask.h  timers.h
src/js/grain/: CMakeLists.txt
src/js/grain/blockStreamer/: CMakeLists.txt  blockStreamer.cpp  blockStreamerService.cpp  blockStreamerService.h  eventgen.sh  events_blockStreamerService.hpp
src/js/grain/blockValidator/: blockValidator.cpp  blockValidatorService.cpp  blockValidatorService.h  eventgen.sh  events_blockValidatorService.hpp
src/js/grain/broadcasterTree/: CMakeLists.txt  broadcasterTree.cpp  broadcasterTreeService.cpp  broadcasterTreeService.h  eventgen.sh  events_broadcasterTreeService.hpp
src/js/grain/grainReader/: CMakeLists.txt  eventgen.sh  events_grainReaderService.hpp  grainReader.cpp  grainReaderService.cpp  grainReaderService.h
src/js/grain/grainWriter/: CMakeLists.txt  eventgen.sh  events_grainWriterService.hpp  grainWriter.cpp  grainWriterService.cpp  grainWriterService.h
src/js/grain/leaderElection/: CMakeLists.txt  eventgen.sh  events_leaderElectionService.hpp  leaderElection.cpp  leaderElectionService.cpp  leaderElectionService.h
src/js/grain/node/: CMakeLists.txt  broadcast.cpp  client_node.cpp  events_nodeService.hpp  heart_beat.cpp  leader_node.cpp  nodeService.cpp  nodeService.h  sync.cpp
src/js/grain/txValidator/: CMakeLists.txt  eventgen.sh  events_txValidatorService.hpp  txValidator.cpp  txValidatorService.cpp  txValidatorService.h
src/js/jslib/net/: CMakeLists.txt  asyncExecute.cpp  contract.cpp  createInstance.cpp  js_mysql.cpp  pipeReader.cpp  rpc.cpp  rpc_request.cpp  rpc_response.cpp
src/js/jslib/utils/: CMakeLists.txt  asyncFSio.cpp  eventEmitter.cpp  telnet_js.cpp  telnet_request.cpp  utils.cpp
src/js/mono/: CMakeLists.txt  mainMTJS.cpp
src/js/mtjs/src/: README.md  rpc3_server.ts  stdin.ts  t_fs.ts  t_http_mbench.ts  t_mysql.ts  t_pipe-ll.ts  t_rpc2.ts  t_rpc3.ts  t_timer.ts
src/js/services/: CMakeLists.txt
src/js/services/blockValidator/: CMakeLists.txt  blockValidatorService.cpp  blockValidatorService.h  events_blockValidatorService.hpp
src/js/services/mtjs/: CMakeLists.txt  eventgen.sh  events_mtjs.hpp  mtjs.cpp  mtjsService.cpp  mtjsService.h  mtjs_async_executed.cpp  mtjs_http.cpp  mtjs_rpc.cpp  mtjs_startService.cpp  mtjs_ws_connection.cpp  mtjs_ws_server.cpp
src/js/test/: CMakeLists.txt  a.out  client.cpp  keygen.cpp  keygen2.cpp  pow.c  test_qjs.cpp
src/js/tmp/: auto_mpz_t.h  bigN.h  bigN2.cpp  blcc.cpp  blscc2.cpp  blscc3.cpp  blscc4.cpp  gen_keys.cpp  mcrypto.cpp  mcrypto.h  messages.h  nodeInfo.h  signedBuffer.h  test_bigN.cpp  test_bigN_more.cpp  tree1.cpp
src/js/ts/: .env  tsconfig.json
src/jslib/: CMakeLists.txt
src/jslib/fsjs/: asyncFSio.cpp
src/jslib/net/: CMakeLists.txt  asyncExecute.cpp  js_mysql.cpp  pipeReader.cpp  rpc.cpp  rpc_request.cpp  rpc_response.cpp
src/jslib/utils/: CMakeLists.txt  eventEmitter.cpp  telnet_js.cpp  telnet_request.cpp
src/megatron/: CMakeLists.txt
src/megatron/Events/: g_mt.hpp  g_mt_c.hpp
src/megatron/corelib/: CMakeLists.txt  IUtils.h  REF.h  commonError.cpp  commonError.h  epoll_socket_info.cpp  httpConnection.cpp  httpConnection.h  httpUrlParser.h  ioBuffer.cpp  listenerBuffered1Thread.cpp  mutexInspector.h  networkMultiplexor.cpp  refstring.cpp  refstring.h  route_t.cpp  route_t.h  stream.h  tools_mt.h
src/megatron/doc/: 01.Concept.md
src/megatron/main/: CInstance.cpp  CUtils.cpp  CUtils.h  megatron.cpp
src/megatron/modules/: CMakeLists.txt
src/megatron/test/: CMakeLists.txt  g_test.hpp  g_test_c.hpp
src/megatron/tools/: randdd.cpp
src/mono/: CMakeLists.txt  mainMTJS.cpp  main_.cpp
src/quickjs/: .gitignore  CMakeLists.txt  Makefile  quickjs-libc.c  quickjs.c  quickjs.h  rjs.js  sample.js  z
src/quickjs/tests/: test_builtin.js  test_std.js
src/services/: CMakeLists.txt
src/services/Events/: e.hpp  e_c.hpp
src/services/mtjs/: CMakeLists.txt  eventgen.sh  mtjsService.cpp  mtjsService.h  mtjs_async_executed.cpp  mtjs_http.cpp  mtjs_rpc.cpp  mtjs_startService.cpp  mtjs_ws_connection.cpp  mtjs_ws_server.cpp
(+179 files in other folders)
